--- a/style/login.css
+++ b/style/login.css
@@ -6,14 +6,19 @@
   align-items: center;
 }
 .wrapper .loginBox {
-  width: 400px;
-  height: 700px;
+  width: 350px;
+  height: 500px;
   padding: 50px;
   border: 1px solid #ccc;
   border-radius: 10px;
 }
+@media (max-width: 500px) {
+  .wrapper .loginBox {
+    border: none;
+  }
+}
 .wrapper .loginBox h2 {
-  padding: 30px 0;
+  padding: 20px 0;
   text-align: center;
   font-size: 50px;
   font-weight: bold;
@@ -64,7 +69,7 @@
   display: block;
   text-align: center;
   margin-bottom: 30px;
-  font-size: 14px;
+  font-size: 18px;
   cursor: pointer;
 }
 .wrapper .loginBox .join .sns {
