--- a/style/login.scss
+++ b/style/login.scss
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import './utill.scss';
 
 .wrapper{
     width: 100vw;
@@ -6,16 +7,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
+        
     .loginBox{
-        width: 400px;
-        height: 700px;
+        width: 350px;
+        height: 500px;
         padding: 50px;
-        border: 1px solid #ccc;
+        border: 1px solid $borderColor;
         border-radius: 10px;
 
+        @include mobile_m {
+            border: none;
+        }
+
         h2{
-            padding: 30px 0;
+            padding: 20px 0;
             text-align: center;
             font-size: 50px;
             font-weight: bold;
@@ -37,7 +42,7 @@
                     padding: 0 10px;
                     box-sizing: border-box;
                     border: none;
-                    border-bottom: 1px solid #ccc;
+                    border-bottom: 1px solid $borderColor;
                     outline: none;
                     font-size: 18px;
                 }
@@ -59,7 +64,7 @@
             border: none;
             border-radius: 10px;
             font-size: 20px;
-            background: #ccc;
+            background: $borderColor;
         }
 
         .join{
@@ -67,37 +72,31 @@
                 display: block;
                 text-align: center;
                 margin-bottom: 30px;
-                font-size: 14px;
+                font-size: 18px;
                 cursor: pointer;
             }
-
             .sns{
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 column-gap: 20px;
-
                 a{
                     width: 40px;
                     height: 40px;
                     border-radius: 50%;
                     overflow: hidden;
                 }
-
                 .facebook{
                     background: url('../img/sns_facebook.png') no-repeat center center / contain;
                 }
-
                 .google{
                     background: url('../img/sns_google.png') no-repeat center center / contain;
 
                 }
-
                 .twitter{
                     background: url('../img/sns_twitter.png') no-repeat center center / contain;
 
                 }
-
             }
         }
     }
