--- a/style/ticketing.css
+++ b/style/ticketing.css
@@ -1,4 +1,3 @@
-@import './utill.css';
 * {
   box-sizing: border-box;
 }
@@ -75,7 +74,7 @@
   float: left;
   width: 30px;
   height: 30px;
-  border: 1px solid black;
+  border: 1px solid #292929;
   border-radius: 5px;
   cursor: pointer;
 }
@@ -96,7 +95,7 @@
   text-align: center;
   font-weight: bold;
   background: url("../img/ticketFrame.png") no-repeat center center/cover;
-  border: 2px solid black;
+  border: 2px solid #292929;
 }
 .ticketingWrap .showTicket .ticketDel {
   position: absolute;
@@ -109,7 +108,7 @@
   right: 10px;
   font-size: 50px;
   background: #ccc;
-  border: 1px solid black;
+  border: 1px solid #292929;
   border-radius: 5px;
   cursor: pointer;
 }
