--- a/style/main.css
+++ b/style/main.css
@@ -11,12 +11,12 @@ body {
 }
 @media (max-width: 1200px) {
   .inner {
-    width: 1000px;
+    width: 950px;
   }
 }
 @media (max-width: 1023px) {
   .inner {
-    width: 840px;
+    width: 800px;
   }
 }
 @media (max-width: 860px) {
@@ -659,13 +659,13 @@ main .hot .hotCon .best1 {
 }
 @media (max-width: 1200px) {
   main .hot .hotCon .best1 {
-    width: 345px;
+    width: 335px;
     height: 585px;
   }
 }
 @media (max-width: 1023px) {
   main .hot .hotCon .best1 {
-    width: 270px;
+    width: 250px;
     height: 450px;
   }
 }
@@ -856,16 +856,18 @@ main .hot .hotCon ul {
   flex-wrap: wrap;
   row-gap: 20px;
   width: 700px;
+  height: 640px;
 }
 @media (max-width: 1200px) {
   main .hot .hotCon ul {
-    width: 635px;
+    width: 600px;
     height: 585px;
+    row-gap: 15px;
   }
 }
 @media (max-width: 1023px) {
   main .hot .hotCon ul {
-    width: 560px;
+    width: 540px;
     height: 450px;
     row-gap: 10px;
   }
@@ -885,18 +887,18 @@ main .hot .hotCon ul {
 }
 main .hot .hotCon ul li {
   width: 220px;
-  height: 340px;
+  height: 310px;
   float: left;
 }
 @media (max-width: 1200px) {
   main .hot .hotCon ul li {
-    width: 198.33px;
+    width: 190px;
     height: 282.5px;
   }
 }
 @media (max-width: 1023px) {
   main .hot .hotCon ul li {
-    width: 180px;
+    width: 173.33px;
     height: 220px;
   }
 }
@@ -986,11 +988,31 @@ main .newCon ul {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  height: 390px;
+  height: 350px;
+}
+@media (max-width: 1200px) {
+  main .newCon ul {
+    height: 300px;
+  }
+}
+@media (max-width: 1023px) {
+  main .newCon ul {
+    height: 250px;
+  }
 }
 main .newCon ul li {
-  width: 224px;
+  width: 204px;
   height: 100%;
+}
+@media (max-width: 1200px) {
+  main .newCon ul li {
+    width: 178px;
+  }
+}
+@media (max-width: 1023px) {
+  main .newCon ul li {
+    width: 152px;
+  }
 }
 main .newCon ul li a {
   display: block;
@@ -1004,7 +1026,17 @@ main .newCon ul li a .newImg {
 }
 main .newCon ul li a .newImg img {
   width: 100%;
-  height: 310px;
+  height: 270px;
+}
+@media (max-width: 1200px) {
+  main .newCon ul li a .newImg img {
+    height: 230px;
+  }
+}
+@media (max-width: 1023px) {
+  main .newCon ul li a .newImg img {
+    height: 190px;
+  }
 }
 main .newCon ul li a .newImg .dDay {
   display: flex;
@@ -1016,22 +1048,78 @@ main .newCon ul li a .newImg .dDay {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 170px;
+  width: 85%;
   height: 100px;
   border: 3px solid #EC7D2C;
   background-color: rgba(0, 0, 0, 0.7);
   color: #fff;
+}
+@media (max-width: 1200px) {
+  main .newCon ul li a .newImg .dDay {
+    height: 90px;
+  }
+}
+@media (max-width: 1023px) {
+  main .newCon ul li a .newImg .dDay {
+    height: 75px;
+  }
 }
 main .newCon ul li a .newImg .dDay span:first-of-type {
   color: #EC7D2C;
   font-size: 25px;
   font-weight: bold;
 }
+@media (max-width: 1200px) {
+  main .newCon ul li a .newImg .dDay span:first-of-type {
+    font-size: 23px;
+  }
+}
+@media (max-width: 1023px) {
+  main .newCon ul li a .newImg .dDay span:first-of-type {
+    font-size: 21px;
+  }
+}
 main .newCon ul li a .newImg .dDay span:last-of-type {
   font-size: 20px;
 }
+@media (max-width: 1200px) {
+  main .newCon ul li a .newImg .dDay span:last-of-type {
+    font-size: 18px;
+  }
+}
+@media (max-width: 1023px) {
+  main .newCon ul li a .newImg .dDay span:last-of-type {
+    font-size: 17px;
+  }
+}
+main .newCon ul li a .text {
+  width: 100%;
+  height: 80px;
+}
+@media (max-width: 1200px) {
+  main .newCon ul li a .text {
+    height: 70px;
+    font-size: 15px;
+  }
+}
+@media (max-width: 1023px) {
+  main .newCon ul li a .text {
+    height: 60px;
+    font-size: 14px;
+  }
+}
 main .newCon ul li a .text p {
   color: #EC7D2C;
+}
+@media (max-width: 1200px) {
+  main .newCon ul li a .text p {
+    font-size: 14px;
+  }
+}
+@media (max-width: 1023px) {
+  main .newCon ul li a .text p {
+    font-size: 12px;
+  }
 }
 main .ad {
   width: 100%;
