--- a/style/main.scss
+++ b/style/main.scss
@@ -13,10 +13,10 @@ body {
     margin: 0 auto;
 
     @include desktop{
-        width: 1000px;
+        width: 950px;
     }
     @include tablet{
-        width: 840px;
+        width: 800px;
     }
     @include mobile_xl{
         width: 600px;
@@ -636,11 +636,11 @@ main {
                 height: 640px;
 
                 @include desktop{
-                    width: 345px;
+                    width: 335px;
                     height: 585px;
                 }
                 @include tablet{
-                    width: 270px;
+                    width: 250px;
                     height: 450px;
                 }
                 @include mobile_xl{
@@ -810,13 +810,15 @@ main {
                 flex-wrap: wrap;
                 row-gap: 20px;
                 width: 700px;
+                height: 640px;
 
                 @include desktop{
-                    width: 635px;
+                    width: 600px;
                     height: 585px;
+                    row-gap: 15px;
                 }
                 @include tablet{
-                    width: 560px;
+                    width: 540px;
                     height: 450px;
                     row-gap: 10px;
                 }
@@ -833,15 +835,15 @@ main {
 
                 li {
                     width: 220px;
-                    height: 340px;
+                    height: 310px;
                     float: left;
 
                     @include desktop{
-                        width: 198.33px;
+                        width: 190px;
                         height: 282.5px;
                     }
                     @include tablet{
-                        width: 180px;
+                        width: 173.33px;
                         height: 220px;
                     }
                     @include mobile_xl{
@@ -928,11 +930,25 @@ main {
         display: flex;
         justify-content: space-between;
         width: 100%;
-        height: 390px;
+        height: 350px;
+
+        @include desktop{
+            height: 300px;
+        }
+        @include tablet{
+            height: 250px;
+        }
 
         li {
-            width: 224px;
+            width: 204px;
             height: 100%;
+
+            @include desktop{
+                width: 178px;
+            }
+            @include tablet{
+                width: 152px;
+            }
 
             a {
                 display: block;
@@ -946,7 +962,14 @@ main {
 
                     img {
                         width: 100%;
-                        height: 310px;
+                        height: 270px;
+
+                        @include desktop{
+                            height: 230px;
+                        }
+                        @include tablet{
+                            height: 190px;
+                        }
                     }
 
                     .dDay {
@@ -959,27 +982,67 @@ main {
                         top: 50%;
                         left: 50%;
                         transform: translate(-50%, -50%);
-                        width: 170px;
+                        width: 85%;
                         height: 100px;
                         border: 3px solid $mainColor;
                         background-color: rgb(0, 0, 0, 0.7);
                         color: $white;
 
+                        @include desktop{
+                            height: 90px;
+                        }
+                        @include tablet{
+                            height: 75px;
+                        }
+                        
+
                         span:first-of-type {
                             color: $mainColor;
                             font-size: 25px;
                             font-weight: bold;
+
+                            @include desktop{
+                                font-size: 23px;
+                            }
+                            @include tablet{
+                                font-size: 21px;
+                            }
                         }
 
                         span:last-of-type {
                             font-size: 20px;
+
+                            @include desktop{
+                                font-size: 18px;
+                            }
+                            @include tablet{
+                                font-size: 17px;
+                            }
                         }
                     }
                 }
 
                 .text {
+                    width: 100%;
+                    height: 80px;
+                    @include desktop{
+                        height: 70px;
+                        font-size: 15px;
+                    }
+                    @include tablet{
+                        height: 60px;
+                        font-size: 14px;
+                    }
+
                     p {
                         color: $mainColor;
+
+                        @include desktop{
+                            font-size: 14px;
+                        }
+                        @include tablet{
+                            font-size: 12px;
+                        }
                     }
                 }
             }
