--- a/style/main.scss
+++ b/style/main.scss
@@ -5,7 +5,9 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: $black;
 }
-
+.wrapper{
+    width: 100%;
+}
 
 .inner {
     width: 1100px;
@@ -49,6 +51,10 @@ body {
     h3 {
         margin-bottom: 5px;
         font-weight: bold;
+
+        @include mobile_l{
+            margin-bottom: 3px;
+        }
     }
 
     p {
@@ -487,7 +493,6 @@ main {
         @include mobile_l{
             height: 350px;
         }
-        
 
         .s1Slider {
             width: 100%;
@@ -537,7 +542,7 @@ main {
                         height: 13px;
                         margin: 0 8px;
                     }
-                    @include mobile_m{
+                    @include mobile_l{
                         width: 10px;
                         height: 10px;
                         margin: 0 6px;
@@ -562,14 +567,41 @@ main {
             font-size: 50px;
             transform: translateY(-50%);
             cursor: pointer;
+
+            @include tablet{
+                font-size: 40px;
+            }
+            @include mobile_l{
+                font-size: 30px;
+            }
         }
 
         .prevBtn {
             left: 50px;
+
+            @include desktop{
+                left: 30px;
+            }
+            @include tablet{
+                left: 20px;
+            }
+            @include mobile_l{
+                left: 10px;
+            }
         }
 
         .nextBtn {
             right: 50px;
+
+            @include desktop{
+                right: 30px;
+            }
+            @include tablet{
+                right: 20px;
+            }
+            @include mobile_l{
+                right: 10px;
+            }
         }
     }
 
@@ -664,7 +696,7 @@ main {
                         height: 380px;
                     }
                     @include mobile_xl{
-                        height: 310px;
+                        height: 300px;
                     }
                     @include mobile_l{
                         height: 345px;
@@ -692,7 +724,7 @@ main {
                             height: 380px;
                         }
                         @include mobile_xl{
-                            height: 310px;
+                            height: 300px;
                         }
                         @include mobile_l{
                             height: 345px;
@@ -751,7 +783,7 @@ main {
                         height: 70px;
                     }
                     @include mobile_xl{
-                        height: 65px;
+                        height: 50px;
                     }
                     @include mobile_l{
                         height: 175px;
@@ -874,6 +906,7 @@ main {
                             height: 100%;
                             top: 0;
                             left: 0;
+                            padding: 10px;
                             text-align: center;
                             color: $white;
                             background-color: rgb(0, 0, 0, 0.7);
@@ -930,18 +963,43 @@ main {
         display: flex;
         justify-content: space-between;
         width: 100%;
-        height: 350px;
+        height: 330px;
 
         @include desktop{
-            height: 300px;
+            height: 280px;
         }
         @include tablet{
-            height: 250px;
+            height: 245px;
+        }
+        @include mobile_xl{
+            height: 240px;
+        }
+        @include mobile_l{
+            height: 485px;
+            flex-wrap: wrap;
+            row-gap: 5px;
         }
 
         li {
             width: 204px;
             height: 100%;
+
+            &:nth-of-type(6){
+                display: none;
+
+                @include mobile_l{
+                    display: block;
+                }
+            }
+
+            &:nth-of-type(5){
+                @include mobile_xl{
+                    display: none;
+                }
+                @include mobile_l{
+                    display: block;
+                }
+            }
 
             @include desktop{
                 width: 178px;
@@ -949,6 +1007,14 @@ main {
             @include tablet{
                 width: 152px;
             }
+            @include mobile_xl{
+                width: 146.25px;
+            }
+            @include mobile_l{
+                width: 153.33px;
+                height: 240px;
+            }
+
 
             a {
                 display: block;
@@ -962,13 +1028,16 @@ main {
 
                     img {
                         width: 100%;
-                        height: 270px;
+                        height: 260px;
 
                         @include desktop{
-                            height: 230px;
+                            height: 220px;
                         }
                         @include tablet{
                             height: 190px;
+                        }
+                        @include mobile_xl{
+                            height: 185px;
                         }
                     }
 
@@ -994,6 +1063,10 @@ main {
                         @include tablet{
                             height: 75px;
                         }
+                        @include mobile_xl{
+                            height: 70px;
+                            border: 2px solid $mainColor;
+                        }
                         
 
                         span:first-of-type {
@@ -1007,6 +1080,9 @@ main {
                             @include tablet{
                                 font-size: 21px;
                             }
+                            @include mobile_xl{
+                                font-size: 19px;
+                            }
                         }
 
                         span:last-of-type {
@@ -1018,19 +1094,23 @@ main {
                             @include tablet{
                                 font-size: 17px;
                             }
+                            @include mobile_xl{
+                                font-size: 16px;
+                            }
                         }
                     }
                 }
 
                 .text {
                     width: 100%;
-                    height: 80px;
+                    height: 70px;
+
                     @include desktop{
-                        height: 70px;
+                        height: 60px;
                         font-size: 15px;
                     }
                     @include tablet{
-                        height: 60px;
+                        height: 55px;
                         font-size: 14px;
                     }
 
@@ -1060,9 +1140,35 @@ main {
             padding: 0;
             box-sizing: border-box;
 
+            @include desktop{
+                height: 350px;
+            }
+            @include tablet{
+                height: 300px;
+            }
+            @include mobile_xl{
+                height: 250px;
+            }
+            @include mobile_l{
+                height: 200px;
+            }
+
             .aditem {
                 position: relative;
                 height: 400px;
+
+                @include desktop{
+                    height: 350px;
+                }
+                @include tablet{
+                    height: 300px;
+                }
+                @include mobile_xl{
+                    height: 250px;
+                }
+                @include mobile_l{
+                    height: 200px;
+                }
 
                 img {
                     width: 100%;
@@ -1087,6 +1193,15 @@ main {
                     margin: 0 7px;
                     cursor: pointer;
                     border-radius: 50%;
+
+                    @include mobile_xl{
+                        width: 8px;
+                        height: 8px;
+                    } 
+                    @include mobile_l{
+                        width: 7px;
+                        height: 7px;
+                    } 
 
                     button {
                         display: none;
