--- a/style/main.css
+++ b/style/main.css
@@ -35,7 +35,7 @@ body {
 }
 @media (max-width: 500px) {
   .inner {
-    width: 100%;
+    width: 95%;
   }
 }
 
@@ -64,6 +64,11 @@ body {
     margin-bottom: 3px;
   }
 }
+@media (max-width: 500px) {
+  .text h3 {
+    margin-bottom: 2px;
+  }
+}
 .text p {
   font-size: 14px;
   color: #aaa;
@@ -71,6 +76,11 @@ body {
 
 section {
   padding: 30px 0;
+}
+@media (max-width: 500px) {
+  section {
+    padding: 20px 0;
+  }
 }
 
 h2 {
@@ -84,9 +94,15 @@ h2 {
     font-size: 35px;
   }
 }
-@media (max-width: 860px) {
+@media (max-width: 650px) {
   h2 {
     font-size: 30px;
+  }
+}
+@media (max-width: 500px) {
+  h2 {
+    font-size: 25px;
+    padding: 20px 0;
   }
 }
 
@@ -109,6 +125,13 @@ a {
   .more {
     width: 160px;
     height: 40px;
+  }
+}
+@media (max-width: 500px) {
+  .more {
+    width: 140px;
+    height: 35px;
+    font-size: 13px;
   }
 }
 
@@ -512,6 +535,11 @@ main .mainSlider {
     height: 350px;
   }
 }
+@media (max-width: 500px) {
+  main .mainSlider {
+    height: 300px;
+  }
+}
 main .mainSlider .s1Slider {
   width: 100%;
 }
@@ -537,6 +565,11 @@ main .mainSlider .s1Slider .s1item {
 @media (max-width: 650px) {
   main .mainSlider .s1Slider .s1item {
     height: 350px;
+  }
+}
+@media (max-width: 500px) {
+  main .mainSlider .s1Slider .s1item {
+    height: 300px;
   }
 }
 main .mainSlider .s1Slider .s1item img {
@@ -698,6 +731,11 @@ main .hot .hotCon {
     height: 520px;
   }
 }
+@media (max-width: 500px) {
+  main .hot .hotCon {
+    height: auto;
+  }
+}
 main .hot .hotCon img {
   width: 100%;
   height: 100%;
@@ -732,6 +770,12 @@ main .hot .hotCon .best1 {
     height: 520px;
   }
 }
+@media (max-width: 500px) {
+  main .hot .hotCon .best1 {
+    flex: 33%;
+    height: auto;
+  }
+}
 main .hot .hotCon .best1 .b1ImgBox {
   width: 100%;
   height: 550px;
@@ -755,6 +799,11 @@ main .hot .hotCon .best1 .b1ImgBox {
 @media (max-width: 650px) {
   main .hot .hotCon .best1 .b1ImgBox {
     height: 345px;
+  }
+}
+@media (max-width: 500px) {
+  main .hot .hotCon .best1 .b1ImgBox {
+    height: 49.5%;
   }
 }
 main .hot .hotCon .best1 .b1ImgBox img {
@@ -789,6 +838,11 @@ main .hot .hotCon .best1 .b1ImgBox .best1Bg {
 @media (max-width: 650px) {
   main .hot .hotCon .best1 .b1ImgBox .best1Bg {
     height: 345px;
+  }
+}
+@media (max-width: 500px) {
+  main .hot .hotCon .best1 .b1ImgBox .best1Bg {
+    height: 49.5%;
   }
 }
 main .hot .hotCon .best1 .b1ImgBox .best1Bg .goTicketing {
@@ -851,6 +905,11 @@ main .hot .hotCon .best1 .best1Txt {
 @media (max-width: 650px) {
   main .hot .hotCon .best1 .best1Txt {
     height: 175px;
+  }
+}
+@media (max-width: 500px) {
+  main .hot .hotCon .best1 .best1Txt {
+    display: none;
   }
 }
 main .hot .hotCon .best1 .best1Txt h3,
@@ -936,6 +995,12 @@ main .hot .hotCon ul {
     height: 520px;
   }
 }
+@media (max-width: 500px) {
+  main .hot .hotCon ul {
+    flex: 66%;
+    height: auto;
+  }
+}
 main .hot .hotCon ul li {
   width: 220px;
   height: 310px;
@@ -963,6 +1028,14 @@ main .hot .hotCon ul li {
   main .hot .hotCon ul li {
     width: 122.5px;
     height: 170px;
+  }
+}
+@media (max-width: 500px) {
+  main .hot .hotCon ul li {
+    flex: 49.5%;
+  }
+  main .hot .hotCon ul li:nth-of-type(5), main .hot .hotCon ul li:nth-of-type(6) {
+    display: none;
   }
 }
 main .hot .hotCon ul li div {
@@ -1064,6 +1137,11 @@ main .newCon ul {
     row-gap: 5px;
   }
 }
+@media (max-width: 500px) {
+  main .newCon ul {
+    height: auto;
+  }
+}
 main .newCon ul li {
   width: 204px;
   height: 100%;
@@ -1107,6 +1185,12 @@ main .newCon ul li:nth-of-type(6) {
     height: 240px;
   }
 }
+@media (max-width: 500px) {
+  main .newCon ul li {
+    width: 33%;
+    height: auto;
+  }
+}
 main .newCon ul li a {
   display: block;
   width: 100%;
@@ -1134,6 +1218,11 @@ main .newCon ul li a .newImg img {
 @media (max-width: 860px) {
   main .newCon ul li a .newImg img {
     height: 185px;
+  }
+}
+@media (max-width: 500px) {
+  main .newCon ul li a .newImg img {
+    height: 140px;
   }
 }
 main .newCon ul li a .newImg .dDay {
@@ -1188,6 +1277,11 @@ main .newCon ul li a .newImg .dDay span:first-of-type {
     font-size: 19px;
   }
 }
+@media (max-width: 500px) {
+  main .newCon ul li a .newImg .dDay span:first-of-type {
+    font-size: 16px;
+  }
+}
 main .newCon ul li a .newImg .dDay span:last-of-type {
   font-size: 20px;
 }
@@ -1206,6 +1300,11 @@ main .newCon ul li a .newImg .dDay span:last-of-type {
     font-size: 16px;
   }
 }
+@media (max-width: 500px) {
+  main .newCon ul li a .newImg .dDay span:last-of-type {
+    font-size: 14px;
+  }
+}
 main .newCon ul li a .text {
   width: 100%;
   height: 70px;
@@ -1220,6 +1319,16 @@ main .newCon ul li a .text {
   main .newCon ul li a .text {
     height: 55px;
     font-size: 14px;
+  }
+}
+@media (max-width: 500px) {
+  main .newCon ul li a .text {
+    height: 40px;
+  }
+}
+@media (max-width: 500px) {
+  main .newCon ul li a .text h3 {
+    font-size: 13px;
   }
 }
 main .newCon ul li a .text p {
